--- a/index.html
+++ b/index.html
@@ -7,8 +7,15 @@
     <title>Bootstrap demo</title>
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather&family=Ubuntu&display=swap" rel="stylesheet">
 </head>
 
 <body class="red">
@@ -42,8 +49,8 @@
         </div>
     </nav>
 
-    <!-- starting resume Generator -->
-    <div class="container ">
+    <!--  resume Generator Template for getting data -->
+    <div class="container Resume_template" id="cv-template">
         <h1 class="text-center my-4 resume">Resume Generator</h1>
 
         <div class="row">
@@ -53,8 +60,16 @@
             <div class="col-md-6">
                 <h2 class="my-3">Personal Details</h2>
                 <div class="mb-3">
+                    <label for="img_Field" class="form-label  fs-5 fst-normal">Upload Your Image</label>
+                    <input type="file" class="form-control" id="img_Field" placeholder="Upload Photo">
+                </div>
+                <div class="mb-3">
                     <label for="Name_Field" class="form-label  fs-5 fst-normal">Your Name</label>
                     <input type="text" class="form-control" id="Name_Field" placeholder="Enter name">
+                </div>
+                <div class="mb-3">
+                    <label for="Profession_Field" class="form-label  fs-5 fst-normal">Your Profile</label>
+                    <input type="text" class="form-control" id="Profession_Field" placeholder="Enter your Profession">
                 </div>
                 <div class="mb-3">
                     <label for="Address_Field" class="form-label  fs-5 fst-normal">Your Address</label>
@@ -76,30 +91,30 @@
                 </div>
 
                 <div class="mb-3">
-                    <label for="Email_Field" class="form-label  fs-5 fst-normal">Your Instagram Link</label>
-                    <input type="email" class="form-control" id="Insta_Field" placeholder="Enter Link">
+                    <label for="Github_Field" class="form-label  fs-5 fst-normal">Your GitHub Link</label>
+                    <input type="url" class="form-control" id="Github_Field" placeholder="Enter Link">
                 </div>
 
-                <div class="mb-3">
-                    <label for="Email_Field" class="form-label  fs-5 fst-normal">Your Facebook Link</label>
+                <!-- <div class="mb-3">
+                    <label for="Facebook_Field" class="form-label  fs-5 fst-normal">Your Facebook Link</label>
                     <input type="email" class="form-control" id="Facebook_Field" placeholder="Enter Link">
-                </div>
+                </div> -->
 
                 <div class="mb-3">
                     <label for="Email_Field" class="form-label  fs-5 fst-normal">Your Linked Link</label>
-                    <input type="email" class="form-control" id="Linked_Field" placeholder="Enter link">
+                    <input type="url" class="form-control" id="Linkedin_Field" placeholder="Enter link">
                 </div>
 
 
                 <!-- languages -->
-                <div id="Languages" class="my-4">
+                <div class="my-4" id="Languages">
                     <h2>Languages</h2>
 
                     <!-- first language -->
-                    <input type="text" class="form-control my-2" placeholder="Enter language name">
+                    <input type="text" class="form-control my-2 Lang_Field" placeholder="Enter language name">
 
                     <!-- secondlanguage -->
-                    <input type="text" class="form-control my-2" placeholder="Enter language name">
+                    <input type="text" class="form-control my-2 Lang_Field" placeholder="Enter language name">
                     <div class="d-grid gap-2 col-1 mx-auto my-2" id="addLangBtn">
                         <button type="button" class="btn btn-primary" onclick="addLang()">add</button>
                     </div>
@@ -128,10 +143,10 @@
                     <h2>Hobbies</h2>
 
                     <!-- <first Hobby -->
-                    <input type="text" class="form-control my-2" placeholder="Enter Your Hobby">
+                    <input type="text" class="form-control my-2 hobby" placeholder="Enter Your Hobby">
 
                     <!-- <third Hobby -->
-                    <input type="text" class="form-control my-2" placeholder="Enter Your Hobby">
+                    <input type="text" class="form-control my-2 hobby" placeholder="Enter Your Hobby">
                     <div class="d-grid gap-2 col-1 mx-auto my-2" id="addHobbyBtn">
                         <button type="button" class="btn btn-primary" onclick="addHobby()">add</button>
                     </div>
@@ -157,16 +172,23 @@
                     <h2>Experience</h2>
 
                     <!-- first company details -->
-                    <input type="text" class="form-control" placeholder="Company Name">
+                    <input type="text" class="form-control cmp_exp" placeholder="Company Name">
                     <div class="mb-3">
-                        <textarea type="text" class="form-control my-2" id="Exp_Details"
+                        <textarea type="text" class="form-control my-2 cmp_exp"
                             placeholder="Enter Experience Details"></textarea>
                     </div>
 
-                    <!-- first company details -->
-                    <input type="text" class="form-control" placeholder="Company Name">
+                    <!-- second company details -->
+                    <input type="text" class="form-control cmp_exp" placeholder="Company Name">
                     <div class="mb-3">
-                        <textarea type="text" class="form-control my-2" id="Exp_Details"
+                        <textarea type="text" class="form-control my-2 cmp_exp"
+                            placeholder="Enter Experience Details"></textarea>
+                    </div>
+
+                    <!-- third company details -->
+                    <input type="text" class="form-control cmp_exp" placeholder="Company Name">
+                    <div class="mb-3">
+                        <textarea type="text" class="form-control my-2 cmp_exp"
                             placeholder="Enter Experience Details"></textarea>
                     </div>
                     <div class="d-grid gap-2 col-1 mx-auto my-2" id="addExpDetailsBtn">
@@ -175,17 +197,17 @@
                 </div>
 
                 <!-- skills -->
-                <div id="skills" class="my-3.5">
+                <div class="my-3.5" id="Skills">
                     <h2>Skills</h2>
 
                     <!-- <first skill  -->
-                    <input type="email" class="form-control my-2" placeholder="Enter skill name">
+                    <input type="email" class="form-control my-2 skill" placeholder="Enter skill name">
 
                     <!-- <second skill  -->
-                    <input type="email" class="form-control my-2" placeholder="Enter skill name">
+                    <input type="email" class="form-control my-2 skill" placeholder="Enter skill name">
 
                     <!-- <third skill  -->
-                    <input type="email" class="form-control my-2" placeholder="Enter skill name">
+                    <input type="email" class="form-control my-2 skill" placeholder="Enter skill name">
                     <div class="d-grid gap-2 col-1 mx-auto my-2" id="addSkillBtn">
                         <button type="button" class="btn btn-primary" onclick="addskill()">add</button>
                     </div>
@@ -196,16 +218,23 @@
                     <h2>Certification</h2>
 
                     <!-- first certification -->
-                    <input type="text" class="form-control" placeholder="Organisation Name">
+                    <input type="text" class="form-control crtf_Details" placeholder="Organisation Name">
                     <div class="mb-3">
-                        <textarea type="text" class="form-control my-2" id="crtf_Details"
+                        <textarea type="text" class="form-control my-2 crtf_Details"
                             placeholder="Enter Experience Details"></textarea>
                     </div>
 
                     <!-- second certification -->
-                    <input type="text" class="form-control" placeholder="Organisation Name">
+                    <input type="text" class="form-control crtf_Details" placeholder="Organisation Name">
                     <div class="mb-3">
-                        <textarea type="text" class="form-control my-2" id="crtf_Details"
+                        <textarea type="text" class="form-control my-2 crtf_Details"
+                            placeholder="Enter Experience Details"></textarea>
+                    </div>
+
+                    <!-- third certification -->
+                    <input type="text" class="form-control crtf_Details" placeholder="Organisation Name">
+                    <div class="mb-3">
+                        <textarea type="text" class="form-control my-2 crtf_Details"
                             placeholder="Enter Experience Details"></textarea>
                     </div>
                     <div class="d-grid gap-2 col-1 mx-auto my-2" id="addcrtfDetailsBtn">
@@ -217,7 +246,7 @@
                     <h2>Refrence</h2>
 
                     <!-- Refrence  -->
-                    <input type="text" class="form-control my-2" placeholder="Enter Refrence">
+                    <input type="text" class="form-control my-2 ref_details ref" placeholder="Enter Refrence">
                     <div class="d-grid gap-2 col-1 mx-auto my-2" id="addrefBtn">
                         <button type="button" class="btn btn-primary" onclick="addref()">add</button>
                     </div>
@@ -226,23 +255,134 @@
             </div>
 
         </div>
+        <div class="d-flex justify-content-center btn-lg  my-2" id="generateResume">
+            <button type="button" class="btn btn-primary" onclick="generateResume()">Genrate</button>
+        </div>
     </div>
 
-        <!-- footer -->
-        <footer class="py-3 mt-5" data-bs-theme="dark" style="background-color: rgb(13, 13, 97);">
-            <ul class="nav justify-content-center border-bottom pb-3 mb-3">
-                <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Home</a></li>
-                <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Features</a></li>
-                <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Pricing</a></li>
-                <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">FAQs</a></li>
-                <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">About</a></li>
-            </ul>
-            <p class="text-center text-body-secondary">© 2023 Company, Inc</p>
-        </footer>
 
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-            crossorigin="anonymous"></script>
+
+
+    <!-- Resume Desing -->
+    <div class="container Resume_Design" id="cv-form">
+        <div class="row">
+            <div class="col-md-4 left_Section">
+                <div class="personal_info">
+                    <img src="download.png" alt="1" id="myimg" class="img-fluid">
+                    <h2 id="c_Name">Sameer Khatri</h2>
+                    <h2 id="c_profile">Web Developer</h2>
+                </div>
+
+                <div class="contact_details">
+                    <h2 class="title">CONTACT : </h2>
+                    
+                    <span id="c_contact"><i class="fa-solid fa-phone fa-lg details" style="color:white"></i>&ensp; +91
+                        9926029041</span><br>
+
+                    <span id="c_mail"><i class="fa-solid fa-envelope fa-lg details" style="color:white"></i>&ensp;&nbsp;
+                        khatrisameer199@gamil.com</span><br>
+
+                    <span id="c_linkedin"><i class="fa-brands fa-linkedin fa-lg details"
+                            style="color:white"></i>&ensp;&ensp;
+                        sameerdev512@gmail.com</span><br>
+
+                    <span id="c_github"><i class="fa-brands fa-github fa-lg details" style="color:white"></i>&ensp; +91
+                        9926029041</span><br>
+
+                    <span id="c_address"><i class="fa-solid fa-location-dot fa-lg details" style="color:white"></i>&ensp;
+                        59/3 shiv bagh colony inore mp</span><br>
+                </div>
+
+                <div class="r_skills">
+                    <h2 class="title">SKILLS : </h2>
+                    <ul id="c_skill">
+                        <li>C++ Developer</li>
+                        <li>C Developer</li>
+                        <li>JavaScript</li>
+                        <li>Html</li>
+                        <li>CSS</li>
+                    </ul>
+                </div>
+
+                <div class="hobbies">
+                    <h2 class="title">HOBBIES</h2>
+                    <ul id="c_hobbies">
+                        <li>Badminton</li>
+                        <li>Chess</li>
+                        <li>Gardning</li>
+                        <li>Web Design</li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="col-md-8 right_Section">
+                <h3 id="objtitle">OBJECTIVE</h3>
+                <div id="c_objective">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore voluptas deserunt modi culpa sed
+                    similique nesciunt enim perspiciatis vero dignissimos. Nisi vero recusandae sit incidunt temporibus
+                    expedita eos vel, optio doloremque numquam quam repellat placeat totam beatae provident tempora,
+                    laborum obcaecati eveniet culpa non odio porro minus dolorem asperiores. Vel, voluptatibus quasi.
+                    Distinctio quo rem unde omnis neque nulla officia quasi eum deleniti odio, minus, voluptatum
+                    veritatis officiis aspernatur deserunt laudantium perspiciatis dicta magnam velit animi nemo totam.
+                    Optio itaque id officiis aspernatur minima quam similique rerum suscipit dolor facere.
+                </div>
+
+                <hr class="obj_line">
+
+                <div class="c_experience">
+                    <h3 class="title2">EXPERIENCE</h3>
+                    <ul id="c_experience_details">
+                        <li>Infosys</li>
+                        <li>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Similique commodi id omnis
+                            assumenda ipsa inventore. Sed quod magni nam quos totam. Doloribus quidem dolor temporibus
+                            velit esse consequatur, animi, nobis explicabo iure soluta sapiente.</li><br>
+                        <li>Infosys</li>
+                        <li>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Similique commodi id omnis
+                            assumenda ipsa inventore. Sed quod magni nam quos totam. Doloribus quidem dolor temporibus
+                            velit esse consequatur, animi, nobis explicabo iure soluta sapiente.</li><br>
+                        <li>Infosys</li>
+                        <li>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Similique commodi id omnis
+                            assumenda ipsa inventore. Sed quod magni nam quos totam. Doloribus quidem dolor temporibus
+                            velit esse consequatur, animi, nobis explicabo iure soluta sapiente.</li>
+                    </ul>
+                </div>
+
+                <div class="c_certification">
+                    <h3 class="title2"> CERTIFICATION</h3>
+                    <ul id="c_crtf">
+                        <li>Full stack web developer</li>
+                        <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat ipsum temporibus modi quasi
+                            omnis earum dolor accusantium quia, excepturi porro at sit similique!</li>
+                    </ul>
+                </div>
+
+                <div class="c_refrence">
+                    <h3 class="title2">REFRENCE</h3>
+                    <ul id="c_ref">
+                        <li>Full stack web developer</li>
+                        <li>Full stack web developer</li>
+                </div>
+            </div>
+
+        </div>
+    </div>
+
+    <!-- footer -->
+    <footer class="py-3 mt-5" data-bs-theme="dark" style="background-color: rgb(13, 13, 97);">
+        <ul class="nav justify-content-center border-bottom pb-3 mb-3">
+            <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Home</a></li>
+            <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Features</a></li>
+            <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Pricing</a></li>
+            <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">FAQs</a></li>
+            <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">About</a></li>
+        </ul>
+        <p class="text-center text-body-secondary">© 2023 Company, Inc</p>
+    </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+        crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/e7c72b33da.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
