--- a/index.html
+++ b/index.html
@@ -49,6 +49,11 @@
         </div>
     </nav>
 
+    <!-- alert to provide image compulsary -->
+    <div class="alert alert-warning" role="alert">
+        <strong>Note : </strong>Uploading profile image is compulsary.
+    </div>
+
     <!--  resume Generator Template for getting data -->
     <div class="container Resume_template" id="cv-template">
         <h1 class="text-center my-4 resume">Resume Generator</h1>
@@ -126,15 +131,13 @@
                     <h2>Education Details</h2>
 
                     <!-- first Education Details -->
-                    <input type="text" class="form-control my-2 edu_details"
-                        placeholder="University-name">
-                        <textarea type="text" class="form-control my-2 edu_details"
+                    <input type="text" class="form-control my-2 edu_details" placeholder="University-name">
+                    <textarea type="text" class="form-control my-2 edu_details"
                         placeholder="University-name ,Degree-name ,Percentage ,Year"></textarea>
 
                     <!-- second Education Details -->
-                    <input type="text" class="form-control my-2 edu_details"
-                        placeholder="University-name ">
-                        <textarea type="text" class="form-control my-2 edu_details"
+                    <input type="text" class="form-control my-2 edu_details" placeholder="University-name ">
+                    <textarea type="text" class="form-control my-2 edu_details"
                         placeholder="University-name ,Degree-name ,Percentage ,Year"></textarea>
                     <div class="d-grid gap-2 col-1 mx-auto my-2" id="addEduDetailsBtn">
                         <button type="button" class="btn btn-primary" onclick="addEduDetails()">add</button>
@@ -279,7 +282,7 @@
 
                 <div class="contact_details">
                     <h2 class="title">CONTACT : </h2>
-                    
+
                     <span id="c_contact"><i class="fa-solid fa-phone fa-lg details" style="color:white"></i>&ensp; +91
                         9926029041</span><br>
 
@@ -293,7 +296,8 @@
                     <span id="c_github"><i class="fa-brands fa-github fa-lg details" style="color:white"></i>&ensp; +91
                         9926029041</span><br>
 
-                    <span id="c_address"><i class="fa-solid fa-location-dot fa-lg details" style="color:white"></i>&ensp;
+                    <span id="c_address"><i class="fa-solid fa-location-dot fa-lg details"
+                            style="color:white"></i>&ensp;
                         59/3 shiv bagh colony inore mp</span><br>
                 </div>
 
