change till 30 Jan

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
                 <div class="mb-3">
                     <label for="Github_Field" class="form-label  fs-5 fst-normal">Your GitHub Link</label>
-                    <input type="url" class="form-control" id="Github_Field" placeholder="Enter Link">
+                    <input type="url" class="form-control" id="Github_Field" placeholder="Enter Github Link">
                 </div>
 
                 <!-- <div class="mb-3">
@@ -107,7 +107,7 @@
 
                 <div class="mb-3">
                     <label for="Email_Field" class="form-label  fs-5 fst-normal">Your Linked Link</label>
-                    <input type="url" class="form-control" id="Linkedin_Field" placeholder="Enter link">
+                    <input type="url" class="form-control" id="Linkedin_Field" placeholder="Enter Linked link">
                 </div>
 
 
@@ -131,12 +131,12 @@
                     <h2>Education Details</h2>
 
                     <!-- first Education Details -->
-                    <input type="text" class="form-control my-2 edu_details" placeholder="University-name">
+                    <input type="text" class="form-control my-2 edu_details" placeholder="Institute-name">
                     <textarea type="text" class="form-control my-2 edu_details"
                         placeholder="University-name ,Degree-name ,Percentage ,Year"></textarea>
 
                     <!-- second Education Details -->
-                    <input type="text" class="form-control my-2 edu_details" placeholder="University-name ">
+                    <input type="text" class="form-control my-2 edu_details" placeholder="Institute-name ">
                     <textarea type="text" class="form-control my-2 edu_details"
                         placeholder="University-name ,Degree-name ,Percentage ,Year"></textarea>
                     <div class="d-grid gap-2 col-1 mx-auto my-2" id="addEduDetailsBtn">
@@ -225,24 +225,24 @@
                     <h2>Certification</h2>
 
                     <!-- first certification -->
-                    <input type="text" class="form-control crtf_Details" placeholder="Organisation Name">
+                    <input type="text" class="form-control crtf_Details" placeholder="Certification Name">
                     <div class="mb-3">
                         <textarea type="text" class="form-control my-2 crtf_Details"
-                            placeholder="Enter Experience Details"></textarea>
+                            placeholder="Enter Certifiaction Details"></textarea>
                     </div>
 
                     <!-- second certification -->
-                    <input type="text" class="form-control crtf_Details" placeholder="Organisation Name">
+                    <input type="text" class="form-control crtf_Details" placeholder="Certifiaction Name">
                     <div class="mb-3">
                         <textarea type="text" class="form-control my-2 crtf_Details"
-                            placeholder="Enter Experience Details"></textarea>
+                            placeholder="Enter certification Details"></textarea>
                     </div>
 
                     <!-- third certification -->
-                    <input type="text" class="form-control crtf_Details" placeholder="Organisation Name">
+                    <input type="text" class="form-control crtf_Details" placeholder="Certifiaction Name">
                     <div class="mb-3">
                         <textarea type="text" class="form-control my-2 crtf_Details"
-                            placeholder="Enter Experience Details"></textarea>
+                            placeholder="Enter certification Details"></textarea>
                     </div>
                     <div class="d-grid gap-2 col-1 mx-auto my-2" id="addcrtfDetailsBtn">
                         <button type="button" class="btn btn-primary" onclick="addcrtfDetails()">add</button>
